@@ -1,4 +1,4 @@
-require File.dirname(__FILE__) + '/../test_helper'
+require File.dirname(__FILE__) + '/../../test_helper'
 
 class RemotePaypalIntegrationTest < Test::Unit::TestCase
   include ActiveMerchant::Billing::Integrations
